src/queue/snapshots/psqs__queue__pbs__tests__cfour_pbs.snap
---
source: src/queue/pbs.rs
expression: got
---
#!/bin/sh
#PBS -S /bin/bash
#PBS -j oe
#PBS -W umask=022
#PBS -l walltime=1000:00:00
#PBS -l ncpus=1
#PBS -l mem=8gb
#PBS -q workq

module load openpbs

export WORKDIR=$PBS_O_WORKDIR
cd $WORKDIR

CFOUR_CMD="/ddn/home8/r2610/bin/c4ext_new.sh $NCPUS"
(cd pts/opt0.inp && $CFOUR_CMD)
(cd pts/opt1.inp && $CFOUR_CMD)
(cd pts/opt2.inp && $CFOUR_CMD)
(cd pts/opt3.inp && $CFOUR_CMD)
